# rust-tune

./: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  performance_benchmark.md  rusttune.db
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md
files/: .env.example  ACTION.md  Cargo.toml  main.rs
src/: db.rs  main.rs  models.rs  tests.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
src/db/: inmemory.rs
src/routes/: auth.rs
src/types/: auth.rs
static/css/: style.css
static/js/: script.js
templates/: 404.html  index.html
