[package]
name = "rust-tune"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.8.5"
moka = { version = "0.12.15", features = ["sync"] }
time = "0.3.47"
log = "0.4.29"
env_logger = "0.11.10"
