[package]
name = "rust-tune"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
futures = "0.3"
# Auth & security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }

# Database (SQLite — no setup needed, file-based)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env config
dotenvy = "0.15"

# Async
tokio = { version = "1", features = ["full"] }